# m-clone

./: .env.example  .gitignore  CLAUDE.md  KG_PLAN.md  docker-compose.yml  sports_team_owners.csv  user-feedback.md
backend/: .env.example  Dockerfile.job-runner  Dockerfile.worker  pyproject.toml
backend/app/: auth.py  column_utils.py  config.py  db.py  dependencies.py  document_chunking.py  document_intelligence.py  document_parser.py  export.py  job_queue.py  kg_ontology.py  main.py  openai_factory.py  predicate_normalization.py  queue.py  redis_client.py  scheduler.py  secrets.py  streams.py  team_context.py
backend/job_runner/: config.py  db.py  dispatcher.py  main.py  metrics.py  queue.py  registry.py  worker.py
backend/tests/: conftest.py  test_agent_deps_refactor.py  test_agent_integration.py  test_api_entities.py  test_attribute_import.py  test_attributes_e2e.py  test_attributes_integration.py  test_attributes_unit.py  test_auth_bypass.py  test_batch_resolver_integration.py  test_batch_resolver_unit.py  test_batch_timeouts.py  test_bulk_delete.py  test_campaign_lifecycle_e2e.py  test_campaign_lifecycle_integration.py  test_campaign_lifecycle_unit.py  test_classification_golden.py  test_classifier.py  test_client_lookup_decoupling.py  test_client_lookup_e2e.py  test_client_lookup_integration.py  test_client_lookup_unit.py  test_clustering_serialization.py  test_comment_team_e2e.py  test_comment_team_integration.py  test_comment_team_unit.py  test_compact_json_output.py  test_cost_controls.py  test_data_model_changes.py  test_data_processing_workflow.py  test_dispatch_integration.py  test_document_chunking.py  test_document_intelligence_benchmark.py  test_document_intelligence_integration.py  test_document_intelligence_unit.py  (+65 more)
job-runner/: .env.example  Dockerfile  pyproject.toml
(+399 files in other folders)
