[project]
name = "m-clone-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "a2a-sdk[http-server]>=0.2.0",
    "azure-identity>=1.16",
    "openai>=1.30",
    "anthropic>=0.25",
    "pydantic-settings>=2.0",
    "pdfplumber>=0.11",
    "python-multipart>=0.0.9",
    "yfinance>=0.2.40",
    "Wikipedia-API>=0.7",
    "certifi>=2024.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tavily-python>=0.5",
    "asyncpg>=0.29",
    "boto3>=1.34",
    "rank-bm25>=0.2",
    "redis[asyncio]>=5.0",
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",
    "itsdangerous>=2.1",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "chonkie>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
